--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
-<div class="container">
-
+<!-- <div class="container"> -->
+  <html>
+<head>
+  <style>
+    body {
+      background-image: url('../../../assets/images/logo.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    </style>
+</head>
   
-  <h3 class="d-flex justify-content-center">Welcome ShopBridge Application</h3>
+  <h3 class="d-flex justify-content-center"  >Welcome to ShopBridge Application</h3>
 
   <nav class="navbar navbar-expand-sm bg-light navbar-dark">
   <ul class="navbar-nav">
@@ -13,5 +23,5 @@
   </nav>
 
 <router-outlet></router-outlet>
-
-</div>
+</html>
+<!-- </div> -->
